--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -413,10 +413,12 @@ margin-bottom: 8px;
 /* TITLEBAR */
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
+width: 1140px;
 height: 56px;
 padding: 0 16px;
 display: flex;
 justify-content: space-between;
+lign-items: center;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
