--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -418,7 +418,7 @@ height: 56px;
 padding: 0 16px;
 display: flex;
 justify-content: space-between;
-lign-items: center;
+align-items: center;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
