--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -399,6 +399,17 @@ display: none!important;
 display: flex!important;
 }
 /*/////////////////////////////////////////////////////////////*/
+/* TITLEBAR */
+/*/////////////////////////////////////////////////////////////*/
+#titlebar{
+width: 1140px;
+height: 56px;
+padding: 0 16px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+/*/////////////////////////////////////////////////////////////*/
 /* NAVI */
 /*/////////////////////////////////////////////////////////////*/
 .navi .avatar{
