--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -322,6 +322,17 @@ width: 244px;
     display: block;
 }
 /*/////////////////////////////////////////////////////////////*/
+/* TITLEBAR */
+/*/////////////////////////////////////////////////////////////*/
+#titlebar{
+width: 1140px;
+height: 56px;
+padding: 0 16px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+/*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
 /*/////////////////////////////////////////////////////////////*/
 .body{
