--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -797,7 +797,7 @@ padding-right: 0;
 </style>
 </head>
 <body>
-<div class="titlebar">
+<div id="titlebar">
     <span class="avatar"></span>
     <h1>PR.</h1>
     <nav class="about links">
