--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -612,7 +612,7 @@ padding: 16px;
 </head>
 <body>
 <div id="fade-container" class="container">
-<div class="titlebar">
+<div id="titlebar">
     <span class="avatar"></span>
     <h1>PR.</h1>
     <nav class="about links">
