--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -1017,7 +1017,7 @@ padding-right: 0;
             <a href="#interests">Interests</a>
             <a href="#journal">Latest Writings</a>
         </nav>
-        <nav class="selected">
+        <nav>
             <a href="#posts">Design Journal</a>
         </nav>
         <nav class="links">
