--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -225,6 +225,7 @@ text-rendering: optimizeLegibility;
 h1,h2, h3,h4{
 line-height: 140%; 
 }
+h1{ font-size: 2.6em; }
 h2, h3, p.l { font-size: 1.8em; }
 .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
