--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -227,7 +227,7 @@ line-height: 140%;
 }
 h1{ font-size: 2.6em; }
 h2, h3, p.l { font-size: 1.8em; }
-.navi nav a:first-of-type, p{ font-size: 1.6em; }
+#titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 #showcase h3 a > span,
 h3 a, 
@@ -430,6 +430,10 @@ gap: 12px;
 #titlebar .avatar{
 width: 56px;
 height: 56px;
+}
+#titlebar nav{
+    display: flex;
+    gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
