--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -262,12 +262,14 @@ text-decoration: underline;
 .navi a{
 opacity: 50%;    
 }
+#titlebar nav a:hover,
 #posts nav a:hover,
 h3 a,
 .navi nav.selected a:first-of-type,
 .navi a.selected{
 opacity: 92%;    
 }
+#titlebar nav a,
 #posts nav a,
 .section p{
 opacity: 68%;
