--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -420,6 +420,8 @@ margin-bottom: 8px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+position: sticky;
+top: 0; 
 }
 #titlebar > div{
 padding: 12px 0;
@@ -631,26 +633,6 @@ padding: 8px;
 /* DESKTOP */
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (min-width: 993px) {
-.header{
-height: 274px;
-overflow: hidden;
-}
-.header div div{
-height: 275px;
-position: relative;
-}
-.header .img{
-position: absolute;
-bottom: 0px;
-left: 12px;
-}
-.header{
-background-position: 100% 0;
-}
-.header > div{
-background: linear-gradient(90deg, #709097 0%, #406E79 22.19%, #42707B 38.51%, rgba(53, 103, 115, 0.00) 100%);
-}
-/*/////////////////////////////////////////////////////////////*/
 .sticky{
     height: 400px;
     position: sticky;
