--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -428,14 +428,16 @@ max-width: 1012px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+margin: 0 auto;
 }
 #titlebar div div{
 display: flex;
 gap: 12px;
+align-items: center;
 }
 #titlebar .avatar{
-width: 56px;
-height: 56px;
+width: 48px;
+height: 48px;
 }
 #titlebar nav{
     display: flex;
