--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -195,6 +195,9 @@ font-family: 'Merriweather','Lora';
 h2, h3, h3 a, p.l, p.l span{
 font-family: 'Lora';
 }
+p{
+    margin-bottom: 12px;
+}
 li{ list-style-position: inside;}
 .navi nav a {  
   opacity: 50%;
