--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Initial Experience Case Study | Peter Roper Product Designer</title>
+<title>About | Peter Roper Product Designer</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <meta name="robots" content="noindex, nofollow" />
