--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -469,7 +469,7 @@ margin-bottom: 8px;
 }
 .section p{
 max-width: 668px;
-margin: bottom 16px;
+margin-bottom 16px;
 }
 .tab-container{
 display: none!important;
