--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -444,7 +444,7 @@ height: 36px;
 }
 #titlebar nav{
     display: flex;
-    gap: 12px;
+    gap: 24px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
@@ -469,7 +469,7 @@ margin-bottom: 8px;
 }
 .section p{
 max-width: 668px;
-margin-bottom 16px;
+margin-bottom: 16px;
 }
 .tab-container{
 display: none!important;
