--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -358,7 +358,7 @@ background: #88A4AA;
 .container{
 display: flex;
 justify-content: center;
-padding: 96px 0 0 96px;
+padding: 68px 0 0 0;
 }
 .tab-container{
 display: none!important;
