--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -281,7 +281,7 @@ background: #88A4AA;
 display: flex;
 justify-content: center;
 gap: 0;
-padding: 96px 0 0 96px;
+padding: 68px 0 0 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
@@ -359,7 +359,7 @@ margin-bottom: 8px;
 }
 .segment p{
 max-width: 668px;
-margin: bottom 16px;
+margin-bottom: 16px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SEGMENT */
