--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -390,7 +390,7 @@ background-position: 0 100%;
 .container{
 display: flex;
 justify-content: center;
-padding: 96px 0 0 96px;
+padding: 68spx 0 0 0;
 }
 .tab-container{
 display: none!important;
