--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -402,12 +402,30 @@ display: flex!important;
 /* TITLEBAR */
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
-width: 1140px;
-height: 56px;
-padding: 0 16px;
+width: 100%;
+position: sticky;
+top: 0; 
+}
+#titlebar > div{
+padding: 12px 0;
+max-width: 1012px;
 display: flex;
 justify-content: space-between;
 align-items: center;
+margin: 0 auto;
+}
+#titlebar div div{
+display: flex;
+gap: 12px;
+align-items: center;
+}
+#titlebar .avatar{
+width: 36px;
+height: 36px;
+}
+#titlebar nav{
+    display: flex;
+    gap: 24px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
