--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -855,14 +855,16 @@ padding-right: 0;
 </style>
 </head>
 <body>
-<div id="titlebar">
-    <span class="avatar"></span>
-    <h1>PR.</h1>
-    <nav class="about links">
-        <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About <span class="icn material-icons">chevron_right</span></a>
-        <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume <span class="icn material-icons">chevron_right</span></a>
-    </nav>
-</div>
+    <div id="titlebar"><div>
+        <div>
+            <span class="avatar"></span>
+            <h1>PR.</h1>
+        </div>
+        <nav class="about links">
+            <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About</a>
+            <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
+        </nav>
+    </div></div>
 
 <div id="fade-container" class="container">
 
