--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -225,6 +225,7 @@ text-rendering: optimizeLegibility;
 h1,h2, h3,h4{
 line-height: 140%; 
 }
+h1{ font-size: 2.6em; }
 h2, h3, p.l { font-size: 1.8em; }
 .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
@@ -258,6 +259,7 @@ text-decoration: underline;
 /*/////////////////////////////////////////////////////////////*/
 .section h4,
 #posts p,
+#titlebar nav a,
 .navi a{
 opacity: 50%;    
 }
@@ -303,6 +305,7 @@ color: #FFF;
 .section .img{
 background-color: #E9E9ED;
 }
+#titlebar .avatar,
 #posts nav a.selected,
 #showcase h3 a > span{
     background: #E3E9F0    
@@ -340,6 +343,7 @@ background: #88A4AA;
 #posts nav a{
     border-radius: 4px;
 }
+#titlebar .avatar,
 .navi .back{
     border-radius: 100px;
 }
