--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -199,6 +199,7 @@ h1,h2{
 line-height: 140%; 
 font-family: Lora;
 }
+h1{ font-size: 2.6em; }
 h2 { font-size: 2em; }
 h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 .segment h4, .navi nav a{ font-size: 1.3em; }
@@ -221,6 +222,7 @@ h1,h2,h3,h4{
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
 .segment h4,
+#titlebar nav a,
 .navi a{
 opacity: 50%;    
 }
@@ -248,6 +250,7 @@ color: #FFF;
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
+#titlebar .avatar,
 .navi .back,
 .section .img{
 background-color: #E9E9ED;
@@ -271,6 +274,9 @@ background: #88A4AA;
 /*/////////////////////////////////////////////////////////////*/
 /* BORDERS */
 /*/////////////////////////////////////////////////////////////*/
+#titlebar .avatar{
+border-radius: 100px;
+}
 .section{
     border-color: #D5D5D5;
 }
