--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -245,7 +245,7 @@ font-size: 1em;
     font-size: 0.68em;    
 } 
 @media only screen and (max-width: 992px) {
-    .navi nav.links a{ font-size: 1.8em; }
+    #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
 }
 /*/////////////////////////////////////////////////////////////*/
 h1, h2, h3,h4,.navi nav a {  
