--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -227,7 +227,7 @@ line-height: 140%;
 }
 h1{ font-size: 2.6em; }
 h2, h3, p.l { font-size: 1.8em; }
-.navi nav a:first-of-type, p{ font-size: 1.6em; }
+#titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 #showcase h3 a > span,
 h3 a, 
@@ -242,7 +242,7 @@ font-size: 1em;
     font-size: 0.68em;    
 } 
 @media only screen and (max-width: 992px) {
-    .navi nav.links a{ font-size: 1.8em; }
+    #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
 }
 /*/////////////////////////////////////////////////////////////*/
 h1, h2, h3,h4,.navi nav a {  
@@ -424,8 +424,8 @@ gap: 12px;
 align-items: center;
 }
 #titlebar .avatar{
-width: 36px;
-height: 36px;
+width: 30px;
+height: 30px;
 }
 #titlebar nav{
     display: flex;
