--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -201,7 +201,7 @@ font-family: Lora;
 }
 h1{ font-size: 2.6em; }
 h2 { font-size: 2em; }
-h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+#titlebar nav a, h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 .segment h4, .navi nav a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
@@ -217,6 +217,9 @@ text-decoration: underline;
 }
 h1,h2,h3,h4{
     font-weight: 400;
+}
+@media only screen and (max-width: 992px) {
+    #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
 }
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
@@ -647,7 +650,7 @@ padding: 16px;
         </nav>
     </div></div>
 <div id="fade-container" class="container">
-    
+
 <div class="navi sticky-element">
     <a href="https://peteroper.github.io/portfolio/casestudies/" class="back fade-link"><span class="icn material-icons">arrow_back</span></a>
     <nav class="selected">
