--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -222,6 +222,7 @@ font-size: 9.5px;
 text-rendering: optimizeLegibility;
 }
 }
+#intro h2{ font-size: 5.6em; }}
 h1,h2, h3,h4{
 line-height: 140%; 
 }
@@ -874,8 +875,8 @@ padding-right: 0;
 
 <div class="body">
     <div id="intro" class="section">
-        <p class="l b"><span>Hi I’m Pete, a British Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
-        <p class="m web-only">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
+        <h2>Hi, I'm Peter.</h2>
+        <p class="l b"><span>A Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
     </div>
 
             <!-- posts start -->
