--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -142,6 +142,15 @@
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
+*, body{
+font-family: 'Raleway';
+}
+h1, #intro h2{
+font-family: 'Merriweather','Lora';
+} 
+h2, h3, h3 a, p.l, p.l span{
+font-family: 'Lora';
+}
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
 }
@@ -358,7 +367,6 @@ background-position: 0 100%;
 /* CORE */
 /*/////////////////////////////////////////////////////////////*/
 *, body{
-font-family: 'Raleway';
 padding: 0;
 margin: 0;
 border: 0;
@@ -366,12 +374,6 @@ font-size: 18px;
 line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
-}
-h1{
-font-family: 'Merriweather','Lora';
-} 
-h2, h3, h3 a, p.l, p.l span{
-font-family: 'Lora';
 }
 li{ list-style-position: inside;}
 .navi nav a {  
