--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -641,7 +641,7 @@ padding: 16px;
 
     <div id="titlebar"><div>
         <div>
-            <span class="avatar"></span>
+            <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
             <h1>PR.</h1>
         </div>
         <nav class="about links">
