--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -265,6 +265,7 @@ background: #88A4AA;
 .special.v1 ul li{
     background: rgba(255, 255, 255, 0.68);
 }
+#titlebar,
 .img.v1{
     background-color: #FFF;
 }
