--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -123,48 +123,8 @@ document.addEventListener("DOMContentLoaded", function () {
 
 });
 </script>
+<!-- STYLE CSS-->
 <style>
-/*/////////////////////////////////////////////////////////////*/
-/* MATERIAL ICONS */
-/*/////////////////////////////////////////////////////////////*/
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
-    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
-    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
-}
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: 'liga';
-}
-/*/////////////////////////////////////////////////////////////*/
-/* CORE */
-/*/////////////////////////////////////////////////////////////*/
 *, body{
 font-family: 'Raleway';
 padding: 0;
@@ -174,15 +134,6 @@ font-size: 18px;
 line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
-}
-li{ list-style-position: inside;}
-nav a {  
-  font-weight: 400;
-  opacity: 50%;
-  transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
-}
-html, body {
-  scroll-behavior: smooth;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
@@ -271,6 +222,7 @@ background: #88A4AA;
 .special.v1 ul li{
     background: rgba(255, 255, 255, 0.68);
 }
+#titlebar,
 .img.v1{
     background-color: #FFF;
 }
@@ -282,6 +234,59 @@ border-radius: 100px;
 }
 .section{
     border-color: #D5D5D5;
+}
+</style>
+<!-- CORE CSS -->
+<style>
+/*/////////////////////////////////////////////////////////////*/
+/* MATERIAL ICONS */
+/*/////////////////////////////////////////////////////////////*/
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+    url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+    url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+}
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+/*/////////////////////////////////////////////////////////////*/
+/* CORE */
+/*/////////////////////////////////////////////////////////////*/
+li{ list-style-position: inside;}
+nav a {  
+  font-weight: 400;
+  opacity: 50%;
+  transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+html, body {
+  scroll-behavior: smooth;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* LAYOUT */
@@ -543,6 +548,9 @@ border: 0;
     padding: 24px;
     border-radius: 4px;
 }
+</style>
+<!-- MEDIA QUERIES -->
+<style>
 /*/////////////////////////////////////////////////////////////*/
 /* DESKTOP */
 /*/////////////////////////////////////////////////////////////*/
