--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -432,6 +432,7 @@
     #titlebar .avatar{
     width: 30px;
     height: 30px;
+    background-size: 100% auto;
     }
     #titlebar nav{
         display: flex;
