--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -319,8 +319,9 @@ gap: 12px;
 align-items: center;
 }
 #titlebar .avatar{
-width: 36px;
-height: 36px;
+width: 30px;
+height: 30px;
+background-size: 100% auto;
 }
 #titlebar nav{
     display: flex;
