--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -431,6 +431,7 @@ align-items: center;
 #titlebar .avatar{
 width: 30px;
 height: 30px;
+background-size: 100% auto;
 }
 #titlebar nav{
     display: flex;
