--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -313,7 +313,7 @@ justify-content: space-between;
 align-items: center;
 margin: 0 auto;
 }
-#titlebar div div{
+#titlebar div a{
 display: flex;
 gap: 12px;
 align-items: center;
@@ -649,10 +649,10 @@ padding: 16px;
 <body>
 
     <div id="titlebar"><div>
-        <div>
+        <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
             <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
             <h1>PR.</h1>
-        </div>
+        </a>
         <nav class="about links">
             <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About</a>
             <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
