--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -748,6 +748,10 @@ margin-right: -40px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
+#showcase{
+    padding-bottom: 0;
+    border: 0!important;
+}
 /*/////////////////////////////////////////////////////////////*/
 #posts .post .img-wrap{
 width: 74px;
