--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -171,6 +171,7 @@ h1,h2,h3,h4{
 }
 @media only screen and (max-width: 992px) {
     #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
+    .special ul li p{ font-size: 1.4em; }
 }
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
