--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -229,6 +229,7 @@
         .navi nav.links{ opacity: 92%;   }
     }
     /*/////////////////////////////////////////////////////////////*/
+    #titlebar div a,
     h3 a,
     nav a{
     color: #000;
