--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -228,6 +228,7 @@ h3,
     .navi nav.links{ opacity: 92%;   }
 }
 /*/////////////////////////////////////////////////////////////*/
+#titlebar div a,
 h3 a,
 nav a{
 color: #000;
