--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -551,7 +551,7 @@
     }
     /*/////////////////////////////////////////////////////////////*/
     /* POSTS */
-    /*/////////////////////////////////////////////////////////////*/ß
+    /*/////////////////////////////////////////////////////////////*/
     #posts nav a{
         border-width: 1px;
         border-style: solid;
@@ -578,7 +578,6 @@
     }
     #posts .post > div{
     display: flex;
-    align-items: center;
     flex: 1 0 0;
     }
     #posts .post div div{
@@ -685,6 +684,9 @@
     .navi{
         width: 148px;
     }
+#posts .post > div{
+align-items: center;
+}
     /*/////////////////////////////////////////////////////////////*/
     }
     /*/////////////////////////////////////////////////////////////*/
