--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -550,7 +550,7 @@ margin: 0 0 12px 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* POSTS */
-/*/////////////////////////////////////////////////////////////*/ß
+/*/////////////////////////////////////////////////////////////*/
 #posts nav a{
     border-width: 1px;
     border-style: solid;
@@ -569,7 +569,6 @@ gap: 24px;
 #posts .post{
 display: flex;
 margin-bottom: 20px;
-/*align-items: center;*/
 flex: 1 0 0;
 }
 #posts .post:last-of-type{
@@ -577,7 +576,6 @@ margin-bottom: 0;
 }
 #posts .post > div{
 display: flex;
-align-items: center;
 flex: 1 0 0;
 }
 #posts .post div div{
@@ -614,6 +612,9 @@ padding: 8px;
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
+#showcase{
+    border-bottom: 0;
+}
 #showcase h3 a{
     line-height: 30px;
     position: relative;
@@ -683,6 +684,9 @@ text-decoration: underline;
 }
 .navi{
     width: 148px;
+}
+#posts .post > div{
+align-items: center;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
