--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -189,6 +189,8 @@ font-size: 1em;
     font-size: 0.68em;    
 } 
 @media only screen and (max-width: 992px) {
+    h1{ font-size: 2.2em; }
+    p.l { font-size: 1.8em; line-height: 175%; }
     #titlebar nav a, .navi nav.links a{ font-size: 1.8em; }
     #posts p{ font-size: 1.4em; }
 }
