--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -513,7 +513,7 @@
     }
     .section p{
     max-width: 668px;
-    margin: bottom 16px;
+    margin-bottom 16px;
     }
     /*/////////////////////////////////////////////////////////////*/
     /* IMGS */
@@ -530,12 +530,22 @@
       background-repeat: no-repeat;
       background-size: auto 100%;
     }
-    .tab-container{
-    display: none!important;
-    }
-    .tab-container.tab-selected{
-    display: flex!important;
-    }
+    /*/////////////////////////////////////////////////////////////*/
+.gallery-container {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.gallery {
+    width: 100%;
+  display: inline-block;
+  white-space: nowrap;
+}
+.gallery .wrap{
+  display: inline-block;
+  width: 84%; 
+  margin-right: 12px; 
+  position: relative;
+}
     /*/////////////////////////////////////////////////////////////*/
     /* INTRO */
     /*/////////////////////////////////////////////////////////////*/
@@ -549,6 +559,58 @@
     display: block;
     margin: 0 0 12px 0;
     }
+/*/////////////////////////////////////////////////////////////*/
+
+/* SPECIAL */
+
+/*/////////////////////////////////////////////////////////////*/
+.special{
+    margin-bottom: 36px;
+}
+.special > p{
+    margin-bottom: 12px;
+}
+.special ul{
+    display: flex;
+    gap: 16px;
+}
+.special ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+}
+.special ul li{
+  margin-bottom: 16px; /* Adjust the margin as needed */
+  padding: 20px;
+  border-radius: 4px;
+  list-style-type: none;
+}
+.special ul li h3:before{
+    width: 20px;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 4px;
+    display: inline-block;
+    margin-right: 8px;
+}
+.special ul li:nth-child(1) h3:before{
+    content: '1';
+}
+.special ul li:nth-child(2) h3:before{
+    content: '2';
+}
+.special ul li:nth-child(3) h3:before{
+    content: '3';
+}
+.special ul li:nth-child(4) h3:before{
+    content: '4';
+}
+/*/////////////////////////////////////////////////////////////*/
+.special.v1{
+    padding: 24px;
+    border-radius: 4px;
+}
     /*/////////////////////////////////////////////////////////////*/
     /* POSTS */
     /*/////////////////////////////////////////////////////////////*/
@@ -722,6 +784,7 @@ align-items: center;
     padding: 0 40px;
     }
     .container{
+    width: 100%;
     padding: 40px;
     flex-direction: column;
     }
