--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -150,7 +150,7 @@ h1,h2{
 line-height: 140%; 
 font-family: Lora;
 }
-h1{ font-size: 2.6em; }
+h1{ font-size: 2em; font-weight: 400; }
 h2 { font-size: 2em; }
 #titlebar nav a, h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 .segment h4, .navi nav a{ font-size: 1.3em; }
@@ -652,7 +652,7 @@ padding: 16px;
     <div id="titlebar"><div>
         <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
             <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
-            <h1>PR.</h1>
+            <h1>Peter Roper</h1>
         </a>
         <nav class="about links">
             <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About</a>
