--- a/casestudies/about.html
+++ b/casestudies/about.html
@@ -172,7 +172,7 @@
     h1,h2, h3,h4{
     line-height: 140%; 
     }
-    h1{ font-size: 2.6em; }
+    h1{ font-size: 2em; font-weight: 400; }
     p.l { font-size: 2.2em; line-height: 175%; }
     h2, h3 { font-size: 1.8em; }
     #titlebar nav a, .navi nav a:first-of-type, p{ font-size: 1.6em; }
@@ -917,7 +917,7 @@ margin-right: -24px;
 <div id="titlebar"><div>
     <a href="https://peteroper.github.io/portfolio/casestudies/" class="fade-link">
         <span class="avatar" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar-circle.png);"></span>
-        <h1>PR.</h1>
+        <h1>Peter Roper</h1>
     </a>
     <nav class="about links">
         <a href="https://peteroper.github.io/portfolio/casestudies/about.html" class="fade-link">About</a>
